--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,7 +2,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+$kaldi-red: #231f20
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -61,9 +61,9 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: 231f20
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
+    -webkit-box-shadow: inset 0 0 0 2px 231f20
     box-shadow: inset 0 0 0 2px #f40
     -webkit-transition: all .15s ease
     transition: all .15s ease
